--- a/backbone_model.html
+++ b/backbone_model.html
@@ -19,7 +19,7 @@
 <script type="text/javascript">
     /*
      - store data
-     - emmit events on attibute change
+     - emmit events on attribute change
      - toJSON() give data state of the model
      - set('attributeName', attributeValue);
      - get('attributeName')
