--- a/jquery.html
+++ b/jquery.html
@@ -42,7 +42,7 @@
 
     <p></p>
     <ul>
-        <li>Nullam sit amet elit sed leo convallis eleifend.</li>
+        <li class="active">Nullam sit amet elit sed leo convallis eleifend.</li>
         <li>Quisque imperdiet neque in felis pulvinar, at eleifend nisl porttitor.</li>
         <li>Ut scelerisque sapien at facilisis elementum.</li>
     </ul>
@@ -68,7 +68,9 @@
 
 <script type="text/javascript">
     //selector, find, append, appendTo,  custom events
-    $('p');
+
+
+    /*$('p');
     $('ul').first().find('li').first();
 
     for(var i=0; i<10; i++){
@@ -85,6 +87,7 @@
         console.log('paragraphOneClicked event captured')
     })
 
+*/
 </script>
 </body>
 </html>
